@@ -2,6 +2,7 @@ opsiclientd (4.0.78) stable; urgency=low
 
   * Added sync_time_from_service function.
   * ControlServer: Added Flooding prevention
+  * SoftwareOnDemand: Sorting Products by ProductName
 
  -- Erol Ueluekmen <e.ueluekmen@uib.de>  Tue, 15 Jul 2014 23:08:04 +0100
 
